menambahkan visi misi dan program-program

--- a/YBMBRILiaN/index.html
+++ b/YBMBRILiaN/index.html
@@ -207,19 +207,17 @@
 
           <div class="col-lg-5">
             <div class="about-img">
-              <img src="assets/img/about.jpg" class="img-fluid" alt="">
+              <img src="assets/img/BRILiaN.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
           <div class="col-lg-7">
-            <h3 class="pt-0 pt-lg-5">Neque officiis dolore maiores et exercitationem quae est seda lidera pat claero
-            </h3>
+            <h3 class="pt-0 pt-lg-5">Visi dan Misi YBM BRILiaN</h3>
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Saepe fuga</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">Voluptates</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">Corrupti</a></li>
+              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Visi YBM BRILiaN</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">Misi YBM BRILiaN</a></li>
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
@@ -227,94 +225,48 @@
 
               <div class="tab-pane fade show active" id="tab1">
 
-                <p class="fst-italic">Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita.
-                  Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
+                <p class="fst-italic">Terwujudnya masyarakat berdaya melalui pengelolaan filantropi islam yang adaptif, inspiratif, dan berkarakter.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
+                  <h4>Pengelolaan Filantropi Islam yang ADAPTIF</h4>
                 </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non
-                  eveniet magni quaerat nemo et.</p>
+                <p>Terwujudnya masyarakat berdaya melalui pengelolaan filantropi islam yang adaptif.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
+                  <h4>Pengelolaan Filantropi Islam yang INSPIRATIF</h4>
                 </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure
-                  molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et
-                  perferendis.</p>
+                <p>Terwujudnya masyarakat berdaya melalui pengelolaan filantropi islam yang inspiratif.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
+                  <h4>Pengelolaan Filantropi Islam yang BERKARAKTER</h4>
                 </div>
-                <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
-                  quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error
-                  voluptatem eum.</p>
+                <p>Terwujudnya masyarakat berdaya melalui pengelolaan filantropi islam yang berkarakter.</p>
 
               </div><!-- End Tab 1 Content -->
 
               <div class="tab-pane fade show" id="tab2">
-
-                <p class="fst-italic">Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita.
-                  Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-check2"></i>
+                  <h4>Mewujudkan Transformasi Organisasi</h4>
+                </div>
+                <p>Mewujudkan transformasi organisasi melalui penguatan SDM dan sistem yang unggul, agile, inovatif, dan berbasis teknologi informasi.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
+                  <h4>Mewujudkan Layanan Prima Dalam Rangka Intermediasi Peran Muzaki dan Mustahik</h4>
                 </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non
-                  eveniet magni quaerat nemo et.</p>
+                <p>Mewujudkan layanan prima dalam rangka intermediasi peran muzaki dan mustahik melalui penghimpunan dan pemanfaatan filantropi Islam di lingkungan BRI dan masyarakat pada umumnya.</p>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
+                  <h4>Menyelenggarakan Program Pemberdayaan</h4>
                 </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure
-                  molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et
-                  perferendis.</p>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-check2"></i>
-                  <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
-                </div>
-                <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
-                  quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error
-                  voluptatem eum.</p>
+                <p>Menyelenggarakan program pemberdayaan yang sinergis, berdampak, berorientasi pada kemandirian dan partisipasi guna mewujudkan masyarakat berdaya.</p>
 
               </div><!-- End Tab 2 Content -->
-
-              <div class="tab-pane fade show" id="tab3">
-
-                <p class="fst-italic">Consequuntur inventore voluptates consequatur aut vel et. Eos doloribus expedita.
-                  Sapiente atque consequatur minima nihil quae aspernatur quo suscipit voluptatem.</p>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-check2"></i>
-                  <h4>Repudiandae rerum velit modi et officia quasi facilis</h4>
-                </div>
-                <p>Laborum omnis voluptates voluptas qui sit aliquam blanditiis. Sapiente minima commodi dolorum non
-                  eveniet magni quaerat nemo et.</p>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-check2"></i>
-                  <h4>Incidunt non veritatis illum ea ut nisi</h4>
-                </div>
-                <p>Non quod totam minus repellendus autem sint velit. Rerum debitis facere soluta tenetur. Iure
-                  molestiae assumenda sunt qui inventore eligendi voluptates nisi at. Dolorem quo tempora. Quia et
-                  perferendis.</p>
-
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-check2"></i>
-                  <h4>Omnis ab quia nemo dignissimos rem eum quos..</h4>
-                </div>
-                <p>Eius alias aut cupiditate. Dolor voluptates animi ut blanditiis quos nam. Magnam officia aut ut alias
-                  quo explicabo ullam esse. Sunt magnam et dolorem eaque magnam odit enim quaerat. Vero error error
-                  voluptatem eum.</p>
-
-              </div><!-- End Tab 3 Content -->
-
             </div>
 
           </div>
@@ -653,9 +605,8 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Our Services</h2>
-          <p>Ea vitae aspernatur deserunt voluptatem impedit deserunt magnam occaecati dssumenda quas ut ad dolores
-            adipisci aliquam.</p>
+          <h1>Program YBM BRILiaN</h1>
+          <p>YBM BRILiaN  menyediakan beberapa program. Berikut program - program unggulan kami</p>
         </div>
 
         <div class="row gy-5">
@@ -670,10 +621,9 @@
                   <i class="bi bi-activity"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Nesciunt Mete</h3>
+                  <h3>Bright Scholarship</h3>
                 </a>
-                <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure
-                  perferendis.</p>
+                <p>Beasiswa untuk mahasiswa jenjang sarjana (S1) di PTN terpilih berupa bantuan biaya kuliah dan uang bulanan.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -688,10 +638,9 @@
                   <i class="bi bi-broadcast"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Eosle Commodi</h3>
+                  <h3>Wash Program</h3>
                 </a>
-                <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut
-                  nesciunt dolorem.</p>
+                <p>Wash program berfokus pada pembangunan infrastruktur penyediaan air bersih di wilayah potensi kekeringan</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -706,10 +655,9 @@
                   <i class="bi bi-easel"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Ledo Markt</h3>
+                  <h3>Family Strengthen</h3>
                 </a>
-                <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci
-                  eos earum corrupti.</p>
+                <p>Pemberdayaan keluarga mustahik dalam rangka menguatkan aspek ekonomi, pendidikan, kesehatan, dan mental spiritual.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -724,10 +672,9 @@
                   <i class="bi bi-bounding-box-circles"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Asperiores Commodit</h3>
+                  <h3>Smart Scholarship</h3>
                 </a>
-                <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident
-                  adipisci neque.</p>
+                <p>Beasiswa yang diberikan kepada mahasiswa S1 dari PTN Mitra berupa tunjangan prestasi selama 1 tahun.</p>
                 <a href="#" class="stretched-link"></a>
               </div>
             </div>
@@ -743,10 +690,9 @@
                   <i class="bi bi-calendar4-week"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Velit Doloremque</h3>
+                  <h3>My Scholarship</h3>
                 </a>
-                <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at
-                  autem alias eius labore.</p>
+                <p>Beasiswa yang diberikan kepada pelajar (SD - SMA) hingga mahasiswa S1 berupa tunjangan prestasi 1 tahun.</p>
                 <a href="#" class="stretched-link"></a>
               </div>
             </div>
@@ -762,10 +708,9 @@
                   <i class="bi bi-chat-square-text"></i>
                 </div>
                 <a href="#" class="stretched-link">
-                  <h3>Dolori Architecto</h3>
+                  <h3>Income Generating</h3>
                 </a>
-                <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti
-                  recusandae ducimus enim.</p>
+                <p>Program peningkatan keterampilan usaha dengan pemberian stimulus modal serta pendampingan usaha.</p>
                 <a href="#" class="stretched-link"></a>
               </div>
             </div>
@@ -1475,7 +1420,7 @@
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
-            <h4>Our Services</h4>
+            <h1>Our Services</h1>
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
