--- a/YBMBRILiaN/index-2.html
+++ b/YBMBRILiaN/index-2.html
@@ -421,6 +421,8 @@
       </div>
     </section><!-- End On Focus Section -->
 
+
+    <!-- nilaaaaaaaaaaaaaaa logo sekolah -->
     <!-- ======= Features Section ======= -->
     <section id="features" class="features">
       <div class="container" data-aos="fade-up">
