--- a/YBMBRILiaN/index.html
+++ b/YBMBRILiaN/index.html
@@ -370,7 +370,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-header">
           <h2>Perguruan Tinggi Penerima Beasiswa YBM BRILiaN</h2>
-          <p>Beberapa mitra yang ikut mendukung dalam upaya dedikasi penyaluran zakat, infak, sedekah dan wakaf.</p>
+          <p>Beberapa perguruan tinggi yang menerima beasiswa YBM BRILiaN.</p>
         </div>
 
         <ul class="nav nav-tabs row gy-4 d-flex ">
