--- a/YBMBRILiaN/index.html
+++ b/YBMBRILiaN/index.html
@@ -405,8 +405,8 @@
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-5">
-              <i><img src="assets/img/logo/polinema.png" class="img-fluid" alt=""></i>
-              <h4>Politeknik Negeri Malang</h4>
+              <i><img src="assets/img/logo/its.png" class="img-fluid" alt=""></i>
+              <h4>Institut Teknologi Surabaya</h4>
             </a>
           </li><!-- End Tab 5 Nav -->
 
@@ -426,8 +426,8 @@
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-6">
-              <i><img src="assets/img/logo/ui.png" class="img-fluid" alt=""></i>
-              <h4>Universitas Indonesia</h4>
+              <i><img src="assets/img/logo/ipb.svg" class="img-fluid" alt=""></i>
+              <h4>Institut Pertanian Bogor</h4>
             </a>
           </li><!-- End Tab 8 Nav -->
 
